<b>Version 1.27</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Überarbeitung Anzeige Suchresultate</li>
    <li>[OPTIMIERUNG] Überarbeitung Vorschaubild-Einbettung</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Vorschaubilder auf Startbildschirm und Suche aus allen Tiefen möglich</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Falsche Namensgebung bei Zeitstempel-Suche korrigiert. Es kann sein, dass Zuvor gespeicherte Zeitstempel jeweils im nächsten Eintrag gespeichert ist.</li>
</ul>
<b>Version 1.261</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Anpassung der Grösse des Audio-Players</li>
</ul>
<b>Version 1.26</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Abstand unterhalb der Untermenüs eingefügt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Hauptmenü am oberen Rand fixiert</li>
</ul>
<b>Version 1.251</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Ordnerübergreifender Zurück-Link auf Tiefe 1 hat falsch negative Ergebnisse produziert</li>
</ul>
<b>Version 1.25</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Unterstützte Dateiformate können in der Hilfe nun ein- und ausgeblendet werden</li>
    <li>[<span style="color: blue">INTERFACE</span>] Ladeanimation angepasst. Geringerer Kontrast, langsamere Animation</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehlerhaftes Vehalten beim Hinzufügen eines Favoriten, wenn bereits ein oder mehrere Favoriten vorhanden waren</li>
</ul>
<b>Version 1.242</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Vor-/Zurück-Button nur noch zu Medieninhalten möglich</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Preview-Bilder werden bei Vor-/Zurück-Button ignoriert</li>
</ul>
<b>Version 1.241</b>:<br>
<ul>